# final_train

./: README.md
Communication_pkg/: CMakeLists.txt  package.xml
aruco_maker/: generar_aruco.py
aruco_pkg/: CMakeLists.txt  package.xml
aruco_pkg/launch/: aruco_marker.launch.py
aruco_pkg/scripts/: aruco.py  calibration_chessboard.yaml
camara_calibration/: calibration_chessboard.yaml  calibration_chessboard_1.yaml  camara.py  camera_calibration.py
move_base_pkg/: CMakeLists.txt  package.xml
move_base_pkg/config/: map.yaml
move_base_pkg/launch/: move_base_train.launch.py
move_base_pkg/src/: MoveBaseTrain.cpp  kalman_filter.hpp  kf.cpp
move_base_pkg/versions/: MoveBaseTrain_V2.cpp  MoveBaseTrain_V3.cpp  MoveBaseTrain_V5.cpp  MoveBaseTrain_v4.cpp  final_semi.cpp
train_communication/: CMakeLists.txt  package.xml
train_communication/src/: mqtt.cpp
train_robot_description/: CMakeLists.txt  package.xml
train_robot_description/launch/: display.launch.py
train_robot_description/rviz/: robot.rviz
train_robot_description/urdf/: robot.urdf
